echoserver.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echoserver
  namespace: ingress-haproxy
  labels:
    app.kubernetes.io/name: ingress-haproxy
    app.kubernetes.io/part-of: ingress-haproxy
    app: echoserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-haproxy
        app.kubernetes.io/part-of: ingress-haproxy
        app: echoserver
    spec:
      containers:
      - image: gcr.io/google_containers/echoserver:1.10
        name: echoserver
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: ingress-haproxy
  labels:
    app.kubernetes.io/name: ingress-haproxy
    app.kubernetes.io/part-of: ingress-haproxy
    app: echoserver
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: echoserver
