haproxy-mandatory.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-haproxy
  labels:
    app.kubernetes.io/name: ingress-haproxy
    app.kubernetes.io/part-of: ingress-haproxy
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: haproxy-ingress-controller
  namespace: ingress-haproxy
  labels:
    app.kubernetes.io/name: ingress-haproxy
    app.kubernetes.io/part-of: ingress-haproxy
    run: haproxy-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-haproxy
      app.kubernetes.io/part-of: ingress-haproxy
      run: haproxy-ingress-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-haproxy
        app.kubernetes.io/part-of: ingress-haproxy
        run: haproxy-ingress-controller
      annotations:
        prometheus.io/port: "10254"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: haproxy-ingress-serviceaccount
      containers:
      - name: haproxy-ingress-controller
        image: quay.io/jcmoraisjr/haproxy-ingress
        args:
        - --default-backend-service=$(POD_NAMESPACE)/ingress-default-backend
        - --default-ssl-certificate=$(POD_NAMESPACE)/tls-secret
        - --configmap=$(POD_NAMESPACE)/haproxy-configuration
        - --reload-strategy=native
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: stat
          containerPort: 1936
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ingress-default-backend
  namespace: ingress-haproxy
  labels:
    app.kubernetes.io/name: ingress-haproxy
    app.kubernetes.io/part-of: ingress-haproxy
    run: ingress-default-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-haproxy
      app.kubernetes.io/part-of: ingress-haproxy
      run: ingress-default-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-haproxy
        app.kubernetes.io/part-of: ingress-haproxy
        run: ingress-default-backend
    spec:
      containers:
        - name: ingress-default-backend
          image: gcr.io/google_containers/defaultbackend:1.4
          ports:
          - containerPort: 8080
---
# this service is serving as a default fallback for the haproxy-ingress-controller
apiVersion: v1
kind: Service
metadata:
  name: ingress-default-backend
  namespace: ingress-haproxy
  labels:
    app.kubernetes.io/name: ingress-haproxy
    app.kubernetes.io/part-of: ingress-haproxy
    run: ingress-default-backend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: ingress-default-backend
    app.kubernetes.io/name: ingress-haproxy
    app.kubernetes.io/part-of: ingress-haproxy
