http-echo.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: http-echo
  namespace: ingress-haproxy
  labels:
    app.kubernetes.io/name: ingress-haproxy
    app.kubernetes.io/part-of: ingress-haproxy
    app: http-echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-haproxy
        app.kubernetes.io/part-of: ingress-haproxy
        app: http-echo
    spec:
      containers:
      - image: hashicorp/http-echo
        name: http-echo
        args:
        - "-text=Happy learning HAProxy Ingress controller for kubernetes"
        # the default port is 5678
---
kind: Service
apiVersion: v1
metadata:
  name: http-echo
  labels:
    app.kubernetes.io/name: ingress-haproxy
    app.kubernetes.io/part-of: ingress-haproxy
spec:
  selector:
    app.kubernetes.io/name: ingress-haproxy
    app.kubernetes.io/part-of: ingress-haproxy
    app: http-echo
  ports:
    - port: 5678 # Default port for image
